--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,11 +1,1 @@
-// ============================
-// SASS VARIABLES
-// ============================
-
-// ==============
-// DIMENSIONS
-// ==============
-$box-border: .2em;
-//
-$break1-width: 58em;
-$break2-width: 40em;
+@import "compass";
