--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,5 +1,13 @@
 @import "base";
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic);
 
+// COLORS
+$background: #47618e;
+$text: #ebf4ff;
+$anchor: #ffc3ca;
+$visited: #ffdee1;
+$barrier: #a5b9cc;
+//$barrier: #cfe7ff;
 
 // ==============
 // DIMENSIONS
@@ -16,14 +24,31 @@ $break2-width: 40em;
 body {
   margin: 0 auto;
   width: 50%;
+
+  background-color: $background;
+  color: $text;
+
   font-size: 140%;
   text-align: center;
-  font-family: "Bitter";
+  font-family: "Source Sans Pro";
 }
+
+  a {
+    color: $anchor;
+    &:hover,
+    &:active,
+    &:visited {
+      color: $visited;
+    }
+  }
 
 /* ===========================
 /* HEADER
 /* ======================== */
+
+body > header {
+  border-bottom: (4*$box-border) solid $barrier;
+}
 
 h1 + h2 {
   margin-top: -.75em;
@@ -39,7 +64,7 @@ article {
 
 article + article {
   padding-top: 1em;
-  border-top: $box-border solid #9c9c9c;
+  border-top: $box-border solid $barrier;
 }
 
 p {
@@ -54,6 +79,9 @@ footer {
   font-style: italic;
 }
 
+body > footer {
+  border-top: (4*$box-border) solid $barrier;
+}
 
 @media screen and (max-width: $break1-width) {
   body {
