fixed fonts, github link, cv

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,1 +1,3 @@
 @import "compass";
+@import "normalize";
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic);
