--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -458,60 +458,68 @@ a:hover, a:active, a:visited {
   color: #ffdee1;
 }
 
-/* ===========================
-/* HEADER
-/* ======================== */
-/* line 48, ../sass/screen.scss */
+/* line 44, ../sass/screen.scss */
 body > header {
   border-bottom: 0.8em solid #a5b9cc;
 }
 
-/* line 52, ../sass/screen.scss */
+/* line 48, ../sass/screen.scss */
 h1 + h2 {
   margin-top: -.75em;
 }
 
-/* ===========================
-/* ARTICLES
-/* ======================== */
-/* line 60, ../sass/screen.scss */
+/* line 52, ../sass/screen.scss */
 article {
   text-align: left;
 }
 
-/* line 64, ../sass/screen.scss */
+/* line 56, ../sass/screen.scss */
 article + article {
   padding-top: 1em;
   border-top: 0.2em solid #a5b9cc;
 }
 
-/* line 69, ../sass/screen.scss */
+/* line 61, ../sass/screen.scss */
 p {
   text-align: justify;
+}
+
+/* line 66, ../sass/screen.scss */
+ul.top,
+li.top {
+  /* http://www.alistapart.com/articles/taminglists/ */
+  display: inline;
+  margin: 0;
+  padding-left: 0;
+}
+
+/* line 74, ../sass/screen.scss */
+li.after::before {
+  content: "| ";
 }
 
 /* ===========================
 /* FOOTER
 /* ======================== */
-/* line 77, ../sass/screen.scss */
+/* line 84, ../sass/screen.scss */
 footer {
   font-style: italic;
 }
 
-/* line 81, ../sass/screen.scss */
+/* line 88, ../sass/screen.scss */
 body > footer {
   border-top: 0.8em solid #a5b9cc;
 }
 
 @media screen and (max-width: 58em) {
-  /* line 86, ../sass/screen.scss */
+  /* line 93, ../sass/screen.scss */
   body {
     width: 75%;
     font-size: 120%;
   }
 }
 @media screen and (max-width: 40em) {
-  /* line 93, ../sass/screen.scss */
+  /* line 100, ../sass/screen.scss */
   body {
     width: 95%;
     font-size: 100%;
