--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,34 @@
+@charset "UTF-8";
 @import "compass";
 @import "normalize";
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Averia+Serif+Libre:400,700,400italic,700italic);
+// @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic);
+
+@mixin hide {
+  position: absolute;
+  left: -999em;
+  /* apparently this second push is for old Opera:
+  /* http://css-tricks.com/snippets/css/accessibilityseo-friendly-css-hiding/ */
+  top: -999px;
+}
+
+/* apply a natural box layout model to all elements */
+// http://www.paulirish.com/2012/box-sizing-border-box-ftw/
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+ }
+
+body {
+  font-family: "Averia Serif Libre", Georgia, serif;
+}
+
+blockquote,
+footer {
+  font-style: italic;
+}
+
+blockquote {
+  em {
+    font-style: normal;
+  }
+}
