--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,315 +1,181 @@
 @charset "UTF-8";
 @import "base";
 
-// ==============
-// DIMENSIONS
-// ==============
-$wide: 10%;
-$wide-stance: 80%;
-$narrow: 5%;
-$tiny: 2%;
-
-$box-border: .2em;
-$default-corner: .25em;
-
-$break1: 900px;
-$break2: 500px;
-
-///////// colors /////
-// SOLARIZED COLORS
-// Copyright (c) 2011 Ethan Schoonover */
-// Released under the MIT license and available at */
-// http://ethanschoonover.com/solarized */
-$base03:    #002b36;
-$base02:    #073642;
-$base01:    #586e75;
-$base00:    #657b83;
-$base0:     #839496;
-$base1:     #93a1a1;
-$base2:     #eee8d5;
-$base3:     #fdf6e3;
-$yellow:    #b58900;
-$orange:    #cb4b16;
-$red:       #dc322f;
-$magenta:   #d33682;
-$violet:    #6c71c4;
-$blue:      #268bd2;
-$cyan:      #2aa198;
-$green:     #859900;
-
-@import "highlighting";
-
-/////////////////////// DECORATIONS ////////////////////////
-html {
-  background: $base3;
-  // http://css-tricks.com/css3-gradients/
-  // http://compass-style.org/examples/compass/css3/gradient/
-  // https://github.com/chriseppstein/compass/issues/401
-  @include background-image(repeating-linear-gradient(45deg, $base3, $base3 150px, $base03 150px, $base03 300px));
+/*!*/
+/*! EmojiSymbols Font (c)blockworks - Kenichi Kaneko
+/*! http://emojisymbols.com/ */
+@font-face {
+  font-family: "EmojiSymbols";
+  src: url('/fonts/EmojiSymbols-Regular.woff') format('woff');
+  text-decoration: none;
+  font-style: normal;
 }
+
+///////////////
+// VARIABLES
+///////////////
+$bg: #fffdfc;
+$fg: #3a383a;
+$break0: 1000px;
+$break1: 900px;
+$break2: 650px;
 
 body {
-  font-family: "alber-new-web";
-  color: $base3;
+  color: $fg;
+  background-color: $bg;
+  font-size: 14pt;
 }
 
-blockquote {
-  font-style: italic;
-  em {
-    font-style: normal;
-  }
+*::before,
+*::after {
+  font-family: "EmojiSymbols";
+  font-size: 18pt;
 }
 
-img {
-  border: $box-border solid $base3;
+///// FONT
+body {
+  font-family: "prenton","Helvetica",sans-serif;
 }
 
+///////////////////////
+// LAYOUT
+///////////////////////
 hr {
-  background-color: $base3;
-  color: $base3;
+  @include hide;
+  clear: both;
 }
-
-a {
-  color: $base3;
-  text-decoration: none;
-  border-bottom: .125em dotted;
-}
-
-.page-header,
-.page-footer,
-.sub-footer {
-  background-color: $base03;
-}
-
-p.browsehappy {
+.title {
   text-align: center;
-  color: $red;
-  background-color: $base3;
-  a {
-    color: $cyan;
+}
+
+.about {
+  padding-left: 30%;
+  padding-right: 30%;
+}
+
+.info {
+  float: left;
+  width: 50%;
+  ul {
+    -webkit-padding-start: 0;
+    -moz-padding-start: 0;
+    padding-start: 0;
   }
 }
-
-.slogan,
-dt,
-footer {
-  font-style: italic;
-}
-
-.slogan {
-  em {
-    font-style: normal;
+.contact {
+  text-align: right;
+  padding-left: 4em;
+  padding-right: 2em;
+  ul,
+  li {
+    padding-right: .5em;
+    list-style-type: none;
+    p::after {
+      content: " 📯";
+    }
   }
 }
-
-///// Types
-.about,
-.err404 {
-  border-color: $red;
-  background-color: $red;
-  a {
-    border-bottom-color: $blue;
+.skills {
+  padding-left: 2em;
+  padding-right: 4em;
+  ul,
+  li {
+    padding-left: .5em;
+    list-style-type: none;
+    p::before {
+      content: "🌲 ";
+    }
+    ul li {
+      p::before {
+        content: "🍃 ";
+      }
+    }
   }
 }
 .projects {
-  border-color: $magenta;
-  background-color: $magenta;
-  a {
-    border-bottom-color: $cyan;
-  }
-}
-.stories {
-  border-color: $orange;
-  background-color: $orange;
-  a {
-    border-bottom-color: $violet;
-  }
-}
-.things {
-  border-color: $violet;
-  background-color: $violet;
-  a {
-    border-bottom-color: $orange;
-  }
-}
-.websites {
-  border-color: $blue;
-  background-color: $blue;
-  a {
-    border-bottom-color: $red;
-  }
-}
-.posts {
-  border-color: $cyan;
-  background-color: $cyan;
-  a {
-    border-bottom-color: $magenta;
-  }
-}
-a:hover {
-  background-color: $base03;
-  border-bottom-color: $base3;
-}
-a.reverse:hover {
-  background-color: $base3;
-  border-bottom-color: $base03;
-  color: $base03;
-}
-
-//////////////////////////////////////////////////////////////
-/////////////////////////// LAYOUT ///////////////////////////
-/////////////////////////////////////////////////////////////
-
-body {
-  font-size: 16pt;
-}
-
-main {
-  width: 100%;
-  margin: 0 auto;
-  text-align: center;
-}
-
-article {
-	text-align: left;
-	border: .25em solid;
-	padding-left: 3%;
-	padding-right: 3%;
-	float: left;
-	width: 50%;
-}
-
-section {
-	text-align: left;
-	border: .25em solid;
-	margin-left: 17%;
-	margin-right: 17%;
-	padding-left: 3%;
-	padding-right: 3%;
-}
-
-.page-header,
-.page-footer {
-    clear: both;
-    text-align: center;
-}
-
-.page-header h1 {
-  font-style: italic;
-  padding: .5em;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  line-height: 100%;
-}
-
-h1 {
-  font-size: 300%;
-}
-
-h2 {
-  font-size: 225%;
-}
-
-h3 {
-  font-size: 150%;
-}
-
-h4 {
-  font-size: 131.25%;
-}
-
-h5,
-h6 {
-  font-size: 112.5%;
-}
-
-/* http://unstoppablerobotninja.com/entry/fluid-images/ */
-// /* needs width: 100% in IE stylesheet */
-img,
-object,
-iframe {
-  max-width: 100%;
-}
-img {
-  margin: .5em 0 .5em 0;
-  height: auto;
-  @media screen and (max-width: $break2) {
-    float: none;
-  }
-}
-
-hr {
-  height: .125em;
+  float: left;
   width: 50%;
-  border: 0;
+  padding: 1em 5%;
 }
 
-.assistive-text {
-	@include hide;
+.employment {
+  float: right;
+  width: 50%;
+  padding: 1em 5%;
+  /* padding-top: 1em; */
+  /* padding-left: 15em; */
+  /* padding-right: 15em; */
 }
-//////////////////////// media queries ..................///////////////
-@media screen and (max-width: $break1) {
-  article {
+
+footer {
+  clear: both;
+  padding: 2em;
+
+  text-align: center;
+  font-style: italic;
+}
+
+///// EMOJI
+#sjp::before {
+  content: "📢 ";
+}
+#map::before {
+  content: "🔭 ";
+}
+#philweb::before {
+  content: "🌐 ";
+}
+#foi::before {
+  content: "📖 ";
+}
+#ucsb::before {
+  content: "🏰 ";
+}
+#reed::before {
+  content: "🎪 ";
+}
+#oh::before {
+  content: "🙋 ";
+}
+#gvb::before {
+  content: "🌳 ";
+}
+
+@media screen and (max-width: $break0){
+  .projects,
+  .employment {
     float: none;
     width: 100%;
-    margin: 0;
+    padding: 0;
   }
-  section {
-    width: 80%;
-    margin: 0 auto;
-  }
-
-  h1 {
-    font-size: 225%;
-  }
-
-  h2 {
-    font-size: 150%;
-  }
-
-  h3 {
-    font-size: 131.25%;
-  }
-
-  h4,
-  h5,
-  h6 {
-    font-size: 112.5%;
+  .history {
+    padding-left: 10em;
+    padding-right: 10em;
   }
 }
 
+@media screen and (max-width: $break1){
+  .history {
+    padding-left: 5em;
+    padding-right: 5em;
+  }
+  .contact {
+    padding-left: 2em;
+    padding-right: 1em;
+  }
+  .skills {
+    padding-left: 1em;
+    padding-right: 2em;
+  }
+}
 @media screen and (max-width: $break2) {
-  body {
-    font-size: 14pt;
+  .about,
+  .history {
+    padding-left: 5%;
+    padding-right: 5%;
   }
-  blockquote {
-    margin: 0 1em;
-  }
-  section {
-	margin: 0;
-    width: 100%;
-  }
-  h1 {
-    font-size: 171.5%;
-  }
-
-  h2 {
-    font-size: 150%;
-  }
-
-  h3 {
-    font-size: 128.5%;
-  }
-
-  h4,
-  h5,
-  h6 {
-    font-size: 114.3%;
+  .info {
+    float: none;
+    width: 95%;
   }
 }
