--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -92,19 +92,11 @@ hr {
     }
   }
 }
-.projects {
-  float: left;
-  width: 50%;
-  padding: 1em 5%;
-}
-
+.projects,
 .employment {
-  float: right;
-  width: 50%;
-  padding: 1em 5%;
-  /* padding-top: 1em; */
-  /* padding-left: 15em; */
-  /* padding-right: 15em; */
+  clear: both;
+
+  padding: 1em 15%;
 }
 
 footer {
@@ -144,7 +136,6 @@ footer {
 @media screen and (max-width: $break0){
   .projects,
   .employment {
-    float: none;
     width: 100%;
     padding: 0;
   }
