--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,7 +5,7 @@
 /*! EmojiSymbols Font (c)blockworks - Kenichi Kaneko
 /*! http://emojisymbols.com/ */
 @font-face {
-  font-family: "EmojiSymbols";
+  font-family: 'EmojiSymbols';
   src: url('/fonts/EmojiSymbols-Regular.woff') format('woff');
   text-decoration: none;
   font-style: normal;
@@ -108,6 +108,9 @@ footer {
 }
 
 ///// EMOJI
+#adrl::before {
+  content: "🔠 ";
+}
 #sjp::before {
   content: "📢 ";
 }
