--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import "base";
+@import url('https://fonts.googleapis.com/css?family=Varela');
 
 /*!*/
 /*! EmojiSymbols Font (c)blockworks - Kenichi Kaneko
@@ -34,7 +35,7 @@ body {
 
 ///// FONT
 body {
-  font-family: "prenton","Helvetica",sans-serif;
+  font-family: "Varela", "Georgia", serif;
 }
 
 ///////////////////////
